# libretro_finder

./: .gitignore  Dockerfile  README.md  build.spec  environment.yml  main.py  pyproject.toml  utils.py
.github/workflows/: main.yml  manual_build.yaml  poetry_build.yaml  poetry_caching.yaml  poetry_release.yaml  quality_control.yaml  test_release.yml
config/: BIOS_SPECS.json  __init__.py  core_names.py
libretro_finder/: main.py  utils.py
tests/: __init__.py  fixtures.py  test_main.py  test_utils.py
