[tool.poetry]
name = "libretro-finder"
version = "0.2.5"
description = "Simple tool that finds and prepares your BIOS files for usage with Libretro (or its RetroArch frontend)."
authors = ["Jasper Siebring <j.siebring92@gmail.com>"]
license = "GNU General Public License v3.0"
homepage = "https://github.com/jaspersiebring/libretro_finder"
readme = "README.md"
packages = [
    {include = "libretro_finder"},
    {include = "config"},
]

[tool.poetry.scripts]
libretro_finder = "libretro_finder.main:main"

[tool.poetry.dependencies]
python = ">=3.8,<3.13"
numpy = "^1.15.0"
pandas = ">=1.1.5"
tqdm = "^4.65.0"
gooey = "^1.0.8.1"
vdf = "^3.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pylint = "^2.17.4"
black = "^23.7.0"
mypy = "^1.4.1"
pyinstaller = "^5.13.0"
pytest-mock = "^3.11.1"
pandas-stubs = "^2.0.2.230605"
types-tqdm = "^4.65.0.2"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.'MESSAGES CONTROL']
disable = "C0114, R0912, R0914"
max-line-length = 100