[tool.poetry]
name = "untitled"
version = "0.1.0"
description = "untitled"
authors = ["Jasper <j.siebring92@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
rasterio = "^1.3.8"
geopandas = "^0.13.2"
opencv-python-headless = "^4.8.0.76"
pycocotools = "^2.0.7"
pydantic = "^2.2.1"
tqdm = "^4.66.1"
fiftyone = "^0.21.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
mypy = "^1.5.1"
black = "^23.7.0"
pylint = "^2.17.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"