[tool.poetry]
name = "libretro-finder"
version = "0.3.1"
description = "Simple tool that finds and prepares your BIOS files for usage with Libretro (or its RetroArch frontend)."
authors = ["Jasper Siebring <j.siebring92@gmail.com>"]
license = "GNU General Public License v3.0"
homepage = "https://github.com/jaspersiebring/libretro_finder"
readme = "README.md"
packages = [
    {include = "libretro_finder"},
    {include = "config"},
]

[tool.poetry.scripts]
libretro_finder = "libretro_finder.main:main"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
gooey = "^1.0.8.1"
pandas = "^2.1.4"
tqdm = "^4.66.1"
vdf = "^3.4"
wxpython = "^4.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
mypy = "^1.7.1"
ruff = "^0.1.8"
pytest-mock = "^3.12.0"
pytest-cov = "^4.1.0"
pyinstaller = "^6.3.0"
pandas-stubs = "^2.1.4.231218"
types-tqdm = "^4.66.0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
ignore = ["F811"]